# rust-stream-follower

./: Cargo.toml  Dockerfile  README.md  build-web.sh  build.sh  run-docker.sh  run.sh  start-server.sh
src/: main.rs
web/stream-plotter/: Cargo.toml
web/stream-plotter/src/: data_plot.rs  lib.rs
web/stream-plotter/www/: index.html
