[package]
name = "rust-stream-follower"
version = "0.1.0"
authors = ["Will Murphy <willmurphyscode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-stream = "0.9.0"
serde = { version = "1.0.101", features = ["derive"] }

serde_json = "1.0"
regex = "1.3.1"
lazy_static = "1.4.0"
rocket = "0.4.2"