[package]
name = "stream-plotter"
version = "0.1.0"
authors = ["Will Murphy <willmurphyscode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=['cdylib']

[dependencies]
plotters = "0.2.8"
wasm-bindgen = "0.2.43"
wee_alloc = "*"
web-sys = { version = "0.3.4", features = ['HtmlCanvasElement', 'console'] }
serde = { version = "1.0.101", features = ["derive"] }

serde_json = "1.0"

[profile.release]
lto = true